// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AMP Photo Gallery Page A11y I can see the skip to content link 1`] = `"Ir al contenido"`;

exports[`AMP Photo Gallery Page AMP Geo config 1`] = `"{"AmpBind":true,"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"],"gbOrUnknown":["gb","gg","im","je","uk","unknown"]}}"`;

exports[`AMP Photo Gallery Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net/hit.xiti?",
    "pageview": [
      {
        "s": "598343",
      },
      {
        "s2": "62",
      },
      {
        "p": "mundo.sport.photo_gallery.36935058.page",
      },
      {
        "r": "\${screenWidth}x\${screenHeight}x\${screenColorDepth}",
      },
      {
        "re": "\${availableScreenWidth}x\${availableScreenHeight}",
      },
      {
        "hl": "\${timestamp}",
      },
      {
        "lng": "\${browserLanguage}",
      },
      {
        "x1": "[urn:bbc:cps:curie:asset:08e22e90-7361-cd47-b586-7cb53fc5a012]",
      },
      {
        "x2": "[amp]",
      },
      {
        "x3": "[news-mundo]",
      },
      {
        "x4": "[es]",
      },
      {
        "x5": "[\${sourceUrl}]",
      },
      {
        "x6": "[\${documentReferrer}]",
      },
      {
        "x7": "[article-photo-gallery]",
      },
      {
        "x8": "[simorgh]",
      },
      {
        "x9": "[Río%202016,%20el%20antes%20y%20el%20ahora:%20cómo%20ha%20cambiado%20la%20ropa%20deportiva%20en%20más%20de%20un%20siglo%20de%20juegos%20olímpicos%20-%20BBC%20News%20Mundo]",
      },
      {
        "x11": "[2016-08-07T09:21:02.000Z]",
      },
      {
        "x12": "[2016-08-07T09:21:02.000Z]",
      },
      {
        "ref": "\${documentReferrer}",
      },
    ],
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Photo Gallery Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "PGL",
    "domain": "test.bbc.co.uk",
    "sections": "Mundo, Mundo - PGL",
    "title": "Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Mundo",
  "url": "/mundo",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 2`] = `
{
  "text": "Por qué puedes confiar en la BBC",
  "url": "https://www.bbc.com/mundo/institucional-51359666",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 3`] = `
{
  "text": "Términos de uso",
  "url": "https://www.bbc.com/mundo/institucional-36400005",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 4`] = `
{
  "text": "Sobre la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400007",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 5`] = `
{
  "text": "Política de privacidad",
  "url": "https://www.bbc.com/mundo/institucional-36400009",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 7`] = `
{
  "text": "Escribe a BBC Mundo",
  "url": "https://www.bbc.co.uk/mundo/send/u50853489",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 8`] = `
{
  "text": "Otros idiomas",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`AMP Photo Gallery Page Footer Anchors should match text and url 9`] = `
{
  "text": "Lee sobre nuestra postura acerca de enlaces externos.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`AMP Photo Gallery Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/mundo"`;

exports[`AMP Photo Gallery Page Footer Paragraphs should match text 1`] = `"© 2026 BBC. La BBC no se hace responsable del contenido de sitios externos. Lee sobre nuestra postura acerca de enlaces externos."`;

exports[`AMP Photo Gallery Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Mundo",
  "svg": <path
    d="M175.28362,212.59729c-7.73096-12.38835-15.56195-24.80211-23.48974-37.24183-7.93049-12.43702-15.75932-24.50471-23.48974-36.20037v73.4422h-22.00324V106.2992h23.19233c8.02836,11.99307,15.93074,24.00993,23.71306,36.0522,7.77908,12.04173,15.53545,24.25813,23.26641,36.64648V106.2992h22.00324v106.29809h-23.19233Zm44.25889-106.29809h73.14533v19.02917h-50.25041v23.04417h44.60076v19.02917h-44.60076v26.16586h53.07523v19.02971h-75.97016V106.2992Zm177.91409,106.29809c-3.37043-11.9909-6.66678-23.98451-9.88635-35.97812-3.22173-11.9909-6.36937-23.98451-9.44078-35.97758-2.97299,11.99307-6.04655,23.98668-9.21745,35.97758-3.17306,11.99361-6.44346,23.98722-9.81172,35.97812h-24.23325c-5.05484-17.34315-9.91176-34.88637-14.56969-52.62858-4.65955-17.74059-9.06875-35.62989-13.23136-53.66951h24.97623c2.47659,13.77697,5.1035,27.55448,7.87966,41.32982,2.77345,13.77751,5.69832,27.30628,8.77134,40.58631,6.6392-25.86791,12.9345-51.68553,18.88101-77.45611h22.30011c2.97353,12.68792,6.02114,25.34772,9.14337,37.98481,3.12223,12.63655,6.31854,25.25039,9.58894,37.8361,2.97353-13.08266,5.84702-26.36323,8.62318-39.84333,2.77345-13.4774,5.3517-26.9575,7.73042-40.4376h24.53066c-4.16261,18.03962-8.57397,35.92892-13.23136,53.66951-4.6601,17.74221-9.51486,35.28543-14.56969,52.62858h-24.23325Zm95.3702,2.23001c-5.84918,0-11.62158-.64564-17.3199-1.9326-5.70048-1.28696-11.17547-3.3196-16.42768-6.09576v-20.51621c10.60391,6.444,21.854,9.66356,33.74757,9.66356,6.73924,0,11.86816-1.13826,15.38729-3.4191,3.51697-2.27922,5.27762-5.45012,5.27762-9.51486,0-3.07086-.86843-5.47553-2.6015-7.21077-1.73523-1.73253-4.03987-3.12169-6.91336-4.16261-2.87565-1.04038-6.09522-2.00723-9.66302-2.89891-5.84918-1.387-11.00189-2.97353-15.46191-4.75743-4.46002-1.7839-8.2279-3.88846-11.29876-6.31854-3.07302-2.42738-5.40307-5.35224-6.98744-8.77134-1.58653-3.41964-2.37871-7.50763-2.37871-12.26506,0-6.73924,1.70982-12.53705,5.12892-17.39452,3.41964-4.85476,8.25115-8.59722,14.49561-11.22468,6.24392-2.62475,13.67747-3.93929,22.30011-3.93929,5.64965,0,11.19926,.64564,16.651,1.9326,5.44958,1.28912,10.35571,3.02436,14.7184,5.20354v20.2188c-4.36269-2.67612-9.29207-4.75743-14.79248-6.24392-5.50095-1.48703-11.02731-2.23055-16.57692-2.23055-6.04655,0-10.7299,1.04092-14.04896,3.12223-3.32176,2.08131-4.98075,5.05484-4.98075,8.92004,0,2.77616,.79218,4.98075,2.37871,6.61595,1.58437,1.6352,3.83979,2.97353,6.76465,4.01391,2.92216,1.04092,6.36721,2.05806,10.33246,3.04761,5.05484,1.28966,9.76089,2.70208,14.12358,4.23724,4.35998,1.53786,8.19978,3.49372,11.52154,5.87243,3.3196,2.37871,5.89569,5.40307,7.73096,9.06875,1.83311,3.66784,2.7502,8.17707,2.7502,13.52877,0,7.03881-1.73523,13.05995-5.203,18.06341-3.47047,5.00617-8.47447,8.82271-15.0158,11.44746-6.54133,2.62529-14.42099,3.93983-23.63844,3.93983Z"
  />,
}
`;

exports[`AMP Photo Gallery Page Header Navigation link should match text and url 1`] = `
{
  "text": "Noticias",
  "url": "/mundo",
}
`;

exports[`AMP Photo Gallery Page Image Caption should match text 1`] = `"Pie de foto, En tenis, las competidoras en los juegos de principios del siglo XX utilizaban vestidos y medias largas, algo impensable para los estándares de la actualidad. Fue hasta 1920 en Amberes cuando las mujeres tuvieron participación reconocida oficialmente."`;

exports[`AMP Photo Gallery Page Image should match snapshot 1`] = `
<amp-img
  alt="Tenista de 1904"
  attribution="Getty Images"
  class="bbc-image"
  data-hero="true"
  fallback=""
  height="549"
  layout="responsive"
  src="https://ichef.bbci.co.uk/ace/ws/640/cpsprodpb/4C33/production/_90570591_gettyimages-3046790.jpg.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/4C33/production/_90570591_gettyimages-3046790.jpg.webp 240w, https://ichef.bbci.co.uk/ace/ws/320/cpsprodpb/4C33/production/_90570591_gettyimages-3046790.jpg.webp 320w, https://ichef.bbci.co.uk/ace/ws/480/cpsprodpb/4C33/production/_90570591_gettyimages-3046790.jpg.webp 480w, https://ichef.bbci.co.uk/ace/ws/549/cpsprodpb/4C33/production/_90570591_gettyimages-3046790.jpg.webp 549w"
  width="549"
/>
`;

exports[`AMP Photo Gallery Page Main heading should match text 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos"`;

exports[`AMP Photo Gallery Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/mundo/images/icons/icon-192x192.png",
}
`;

exports[`AMP Photo Gallery Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-152x152.png",
}
`;

exports[`AMP Photo Gallery Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-180x180.png",
}
`;

exports[`AMP Photo Gallery Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-384x384.png",
}
`;

exports[`AMP Photo Gallery Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-512x512.png",
}
`;

exports[`AMP Photo Gallery Page SEO Canonical link 1`] = `"http://localhost:7081/mundo/deportes-36935058"`;

exports[`AMP Photo Gallery Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Photo Gallery Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Photo Gallery Page SEO Heading level 1 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos"`;

exports[`AMP Photo Gallery Page SEO Lang attribute 1`] = `"es"`;

exports[`AMP Photo Gallery Page SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "noBylinesPolicy": "https://www.bbc.com/mundo/institucional-51359666#authorexpertise",
      },
      "dateModified": "2016-08-07T09:21:02.000Z",
      "datePublished": "2016-08-07T09:21:02.000Z",
      "description": "La estética de la ropa deportiva ha ido evolucionando en cada edición olímpica, pero no solo se trata de lucir bien, pues en varias competencias contar con un traje adecuado puede ser un factor que contribuya al triunfo.",
      "headline": "Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_mundo/16506/production/_90689319_gettyimages-2642105-1.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "es",
        "name": "Spanish",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/mundo/deportes-36935058",
        "@type": "WebPage",
        "name": "Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "publishingPrinciples": "https://www.bbc.com/mundo/institucional-51359666",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_mundo/16506/production/_90689319_gettyimages-2642105-1.jpg",
      "url": "http://localhost:7081/mundo/deportes-36935058",
    },
  ],
}
`;

exports[`AMP Photo Gallery Page SEO OG description 1`] = `"La estética de la ropa deportiva ha ido evolucionando en cada edición olímpica, pero no solo se trata de lucir bien, pues en varias competencias contar con un traje adecuado puede ser un factor que contribuya al triunfo."`;

exports[`AMP Photo Gallery Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_mundo/16506/production/_90689319_gettyimages-2642105-1.jpg"`;

exports[`AMP Photo Gallery Page SEO OG image alt 1`] = `"Gimnastas en los primeros juegos"`;

exports[`AMP Photo Gallery Page SEO OG locale 1`] = `"es-005"`;

exports[`AMP Photo Gallery Page SEO OG site name 1`] = `"BBC News Mundo"`;

exports[`AMP Photo Gallery Page SEO OG title 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos - BBC News Mundo"`;

exports[`AMP Photo Gallery Page SEO OG type 1`] = `"article"`;

exports[`AMP Photo Gallery Page SEO OG url 1`] = `"http://localhost:7081/mundo/deportes-36935058"`;

exports[`AMP Photo Gallery Page SEO Page title 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos - BBC News Mundo"`;

exports[`AMP Photo Gallery Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Photo Gallery Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Photo Gallery Page SEO Twitter creator 1`] = `"@bbcmundo"`;

exports[`AMP Photo Gallery Page SEO Twitter description 1`] = `"La estética de la ropa deportiva ha ido evolucionando en cada edición olímpica, pero no solo se trata de lucir bien, pues en varias competencias contar con un traje adecuado puede ser un factor que contribuya al triunfo."`;

exports[`AMP Photo Gallery Page SEO Twitter image alt 1`] = `"Gimnastas en los primeros juegos"`;

exports[`AMP Photo Gallery Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_mundo/16506/production/_90689319_gettyimages-2642105-1.jpg"`;

exports[`AMP Photo Gallery Page SEO Twitter site 1`] = `"@bbcmundo"`;

exports[`AMP Photo Gallery Page SEO Twitter title 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos - BBC News Mundo"`;

exports[`AMP Photo Gallery Page Timestamp should match text and date 1`] = `
{
  "date": "2016-08-07",
  "text": "7 agosto 2016",
}
`;
